@@ -19,7 +19,6 @@
 package org.apache.pinot.query.runtime.timeseries;
 
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableMap;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -31,13 +30,14 @@ import org.apache.pinot.common.metrics.ServerMetrics;
 import org.apache.pinot.common.request.context.ExpressionContext;
 import org.apache.pinot.common.request.context.FilterContext;
 import org.apache.pinot.common.request.context.RequestContextUtils;
-import org.apache.pinot.common.request.context.TimeSeriesContext;
+import org.apache.pinot.core.query.aggregation.function.TimeSeriesAggregationFunction;
 import org.apache.pinot.core.query.executor.QueryExecutor;
 import org.apache.pinot.core.query.request.ServerQueryRequest;
 import org.apache.pinot.core.query.request.context.QueryContext;
 import org.apache.pinot.spi.utils.CommonConstants.Broker.Request.QueryOptionKey;
 import org.apache.pinot.spi.utils.CommonConstants.Query.Request.MetadataKeys;
 import org.apache.pinot.sql.parsers.CalciteSqlParser;
+import org.apache.pinot.tsdb.spi.TimeBuckets;
 import org.apache.pinot.tsdb.spi.operator.BaseTimeSeriesOperator;
 import org.apache.pinot.tsdb.spi.plan.BaseTimeSeriesPlanNode;
 import org.apache.pinot.tsdb.spi.plan.LeafTimeSeriesPlanNode;
@@ -84,7 +84,8 @@ public class PhysicalTimeSeriesServerPlanVisitor {
       TimeSeriesExecutionContext context) {
     List<String> segments = context.getPlanIdToSegmentsMap().getOrDefault(leafNode.getId(), Collections.emptyList());
     ServerQueryRequest serverQueryRequest = compileLeafServerQueryRequest(leafNode, segments, context);
-    return new TimeSeriesPhysicalTableScan(leafNode.getId(), serverQueryRequest, _queryExecutor, _executorService);
+    return new TimeSeriesPhysicalTableScan(context, leafNode.getId(), serverQueryRequest, _queryExecutor,
+        _executorService);
   }
 
   public ServerQueryRequest compileLeafServerQueryRequest(LeafTimeSeriesPlanNode leafNode, List<String> segments,
@@ -93,6 +94,9 @@ public class PhysicalTimeSeriesServerPlanVisitor {
         segments, getServerQueryRequestMetadataMap(context), _serverMetrics);
   }
 
+  /**
+   * Create a transform expression, and link it with an aggregation function.
+   */
   @VisibleForTesting
   QueryContext compileQueryContext(LeafTimeSeriesPlanNode leafNode, TimeSeriesExecutionContext context) {
     FilterContext filterContext =
@@ -100,19 +104,21 @@ public class PhysicalTimeSeriesServerPlanVisitor {
             leafNode.getEffectiveFilter(context.getInitialTimeBuckets())));
     List<ExpressionContext> groupByExpressions = leafNode.getGroupByExpressions().stream()
         .map(RequestContextUtils::getExpression).collect(Collectors.toList());
-    ExpressionContext valueExpression = RequestContextUtils.getExpression(leafNode.getValueExpression());
-    TimeSeriesContext timeSeriesContext = new TimeSeriesContext(context.getLanguage(),
-        leafNode.getTimeColumn(), leafNode.getTimeUnit(), context.getInitialTimeBuckets(), leafNode.getOffsetSeconds(),
-        valueExpression, leafNode.getAggInfo());
+    TimeBuckets timeBuckets = context.getInitialTimeBuckets();
+    ExpressionContext rawTimeValuesInLong = RequestContextUtils.getExpression(leafNode.getTimeColumn());
+    ExpressionContext aggregation = TimeSeriesAggregationFunction.create(context.getLanguage(),
+        leafNode.getValueExpression(), rawTimeValuesInLong, leafNode.getTimeUnit(),
+        leafNode.getOffsetSeconds() == null ? 0 : leafNode.getOffsetSeconds(), timeBuckets, leafNode.getAggInfo());
+    Map<String, String> queryOptions = new HashMap<>(leafNode.getQueryOptions());
+    queryOptions.put(QueryOptionKey.TIMEOUT_MS, Long.toString(Math.max(0L, context.getRemainingTimeMs())));
     return new QueryContext.Builder()
         .setTableName(leafNode.getTableName())
         .setFilter(filterContext)
         .setGroupByExpressions(groupByExpressions)
-        .setSelectExpressions(Collections.emptyList())
-        .setQueryOptions(ImmutableMap.of(QueryOptionKey.TIMEOUT_MS, Long.toString(context.getRemainingTimeMs())))
+        .setSelectExpressions(List.of(aggregation))
+        .setQueryOptions(queryOptions)
         .setAliasList(Collections.emptyList())
-        .setTimeSeriesContext(timeSeriesContext)
-        .setLimit(Integer.MAX_VALUE)
+        .setLimit(leafNode.getLimit())
         .build();
   }
 
